Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.449 devel

**      Moving forward, use the git "stable" branch to track the latest release,
        and git "v#.###" tags for specific releases.


* Verilog::Language 3.448 2018-01-02

****    Workaround comment bug in flex 2.6.4, bug1252. [Rob Stoddard]


* Verilog::Language 3.446 2017-11-08

****	Fix `` expansion of `defines, bug1225, bug1227, bug1228. [Odd Magne Reitan]


* Verilog::Language 3.444 2017-09-21

****	Fix replication handling error, bug1205. [Leon Medpum]

****	Fix compile error on MAC OS X/clang 8.1.0, msg2337. [Kunal Bansal]


* Verilog::Language 3.442 2017-09-08

****	Fix new concatenation handling error, bug1200. [by Stefan Tauner]

****	Fix unreferenced scalar warning, bug1200. [by Stefan Tauner]


* Verilog::Language 3.440 2017-08-31

**	Support for buses and concats in Netlist, msg1626. [by Stefan Tauner]

**	Support pragma protect begin_protected/end_protected, msg2313. [George Cuan]


* Verilog::Language 3.430 2017-07-24

**	Support Verilog::SigParser pin select parsing, msg1626. [by Stefan Tauner]


* Verilog::Language 3.426 2017-06-06

****	Fix lineno with class callbacks, bug1162. [Dave Storrar]


* Verilog::Language 3.423 2017-04-26

****	Fix tests '.' for Perl 5.26.0, rt121025.  [Dan Collins]


* Verilog::Language 3.422 2016-11-24

****    Add additional tests, msg1982. [by Stefan Tauner]

****	Fix passing enum types in SigParser, bug1107. [by Lalit Chhabra]


* Verilog::Language 3.420 2016-07-30

***     Add vhier --skiplist option. [John Busco]

****    Fix duplicate cells when delete cells, bug1049.  [by Stefan Tauner]

****    Fix core dump on Storable store/retrieve, bug1063. [G Aydos]


* Verilog::Language 3.418 2016-02-02

****    Fix Flex 2.6.0 warnings.


* Verilog::Language 3.416 2015-10-02
