@@ -154,6 +154,7 @@ verilog/inc_nonl.v
 verilog/parser_bugs.v
 verilog/parser_sv.v
 verilog/parser_sv09.v
+verilog/parser_sv17.v
 verilog/parser_vectors.v
 verilog/pinorder.v
 verilog/pli.v
