@@ -1050,6 +1050,10 @@ verilog/parser_sv09.v:036: IMPORT  'pkgb' '*'
 verilog/parser_sv09.v:037: VAR  'port' 'foobar' 'module' '' '' '' ''
 verilog/parser_sv09.v:037: PORT  'foobar' 'module' 'input' '' '' '1'
 verilog/parser_sv09.v:038: ENDMODULE  'endmodule'
+verilog/parser_sv17.v:001: COMMENT  '// 1800-2017'
+verilog/parser_sv17.v:002: MODULE  'module' 'sv17' undef '0'
+verilog/parser_sv17.v:003: VAR  'var' 'i' 'module' '' 'integer' '' ''
+verilog/parser_sv17.v:009: ENDMODULE  'endmodule'
 verilog/parser_vectors.v:001: COMMENT  '/* This file contains some instantiations of an unknown module that use bit vectors. */'
 verilog/parser_vectors.v:003: MODULE  'module' 'top' undef '0'
 verilog/parser_vectors.v:003: PORT  'i' 'module' '' '' '' '1'
