@@ -61,7 +61,7 @@ if (! GetOptions (
 		  "input-files!"	=> \$Opt_InFiles,
 		  "resolve-files!"	=> \$Opt_ResolveFiles,
 		  "skiplist=s"		=> \$opt_skiplist,
-		  "sv!"			=> sub { shift; Verilog::Language::language_standard("1800-2012"); },
+		  "sv!"			=> sub { shift; Verilog::Language::language_standard("1800-2017"); },
 		  "language=s"		=> sub { shift; Verilog::Language::language_standard(shift); },
 		  "missing!"		=> \$Opt_Missing,
 		  "missing-modules!"	=> \$Opt_Missing_Modules,
@@ -447,7 +447,7 @@ example module I<x> is referenced, look in I<x>.I<ext>.
 =item -sv
 
 Specifies SystemVerilog language features should be enabled; equivalent to
-"--language 1800-2012".  This option is selected by default, it exists for
+"--language 1800-2017".  This option is selected by default, it exists for
 compatibility with other simulators.
 
 =item -y I<dir>
@@ -486,7 +486,7 @@ those files needed to represent the entire design.
 
 With --cells or --forest, show module instance names.
 
-=item --language <1364-1995|1364-2001|1364-2005|1800-2005|1800-2009|1800-2012>
+=item --language <1364-1995|1364-2001|1364-2005|1800-2005|1800-2009|1800-2012|1800-2017>
 
 Set the language standard for the files.  This determines which tokens are
 signals versus keywords, such as the ever-common "do" (data-out signal,
